Bug 687698 - "Cannot extract the embedded font" error message
Summary: "Cannot extract the embedded font" error message
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 0.00
Hardware: PC Windows 2000
: P2 normal
Assignee: Igor Melichev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-09-23 10:32 UTC by Edward
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
PostScript file (zipped with winzip) (1.38 MB, application/octet-stream)
2004-09-23 10:33 UTC, Edward
Details
PDF file created with gs8.32 (210.66 KB, application/pdf)
2004-09-23 10:34 UTC, Edward
Details
PDF file created with Distiller (156.05 KB, application/pdf)
2004-09-27 09:17 UTC, Edward
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edward 2004-09-23 10:32:02 UTC
I'm converted the attached PostScript file into PDF with GS head and when i'm 
trying to open the PDF file in Acrobat Reader i get "Cannot extract the 
embedded font" error message. The PDF file created by Adobe Distiller opens 
fine in AR.

PS. i got this problem with all gs8.x builds, it works fine, however, with 
gs7.03
Comment 1 Edward 2004-09-23 10:33:09 UTC
Created attachment 910 [details]
PostScript file (zipped with winzip)
Comment 2 Edward 2004-09-23 10:34:45 UTC
Created attachment 911 [details]
PDF file created with gs8.32
Comment 3 Jack Moffitt 2004-09-27 08:02:11 UTC
I cannot reproduce this with Acrobat Reader 5.x on Linux.  What version of
Reader are you using?
Comment 4 Edward 2004-09-27 09:16:56 UTC
I tried it with Acrobat Reader 6.0 for windows on several computers and got the 
same error mesage.
With Acrobat Reader v5.0 this document opens with no error message, however the 
fonts are distorted on the first page - i'm attaching the PDF file created with 
Adobe Distiller, so you can compare the results (see the hieroglyphs in the 
first line of the first page).
Comment 5 Edward 2004-09-27 09:17:47 UTC
Created attachment 922 [details]
PDF file created with Distiller
Comment 6 Ralph Giles 2004-09-27 10:10:38 UTC
I've reproduced the error with the gs8.32-created PDF with Acrobat Reader 6.0 on
MacOS X.
Comment 7 Igor Melichev 2004-09-28 02:24:23 UTC
I've reproduced the effect with Adobe Reader 6.0 on Windows. Actually the 
attached file causes an indeterministic behavior of the Adobe Reader 6.0. For a 
better stability of the effect, run Adobe Reader with no document, then use 
File/Open menu with the copy of the attached file. 

Current HEAD generates same PDF as the attached one, except for file IDs and 
CreationDate. When I disable the PDF stearm compression, the effect becomes 
less probable, and I could not find how to get it stable with no compression.
Comment 8 Igor Melichev 2004-09-28 02:41:42 UTC
There is a problem painting the first 2 hieroglyphs on the first page, with 
both Adobe Reader 6 and Acrobat reader 5.0 . When glyphs are painted, they are 
highly distorted. 
Comment 9 Igor Melichev 2004-09-29 06:26:08 UTC
Trying to render the generated PDF with Ghostscript, got :

     Error: /invalidfont in --@0x1003af90--

This should help to the analyzis.
Comment 10 Igor Melichev 2004-09-29 07:46:05 UTC
Tracing GS with the distilled document, found that default_get_outline returns 
empty string for the following glyph indices : 3, 262, 263, 264, 265, 363, 407, 
391, 314, 367, 392, 326, 312, 653, 370, 328, 338, 312, 425, 324,350 - 'loca' 
specifies zero length. Likely they are missed from the font subset while the 
distillation.
Comment 11 Igor Melichev 2004-09-29 12:13:12 UTC
Patch
http://www.ghostscript.com/pipermail/gs-cvs/2004-September/004894.html
Note another Bug 687716 related to same document.
Comment 12 Igor Melichev 2004-09-29 12:21:39 UTC
Ported the patch to GS_8_1X :
http://www.ghostscript.com/pipermail/gs-cvs/2004-September/004895.html